--- a/app/home/home.css
+++ b/app/home/home.css
@@ -8,7 +8,7 @@
     justify-content: space-evenly;
     align-items: center;
     gap: 35px;
-    padding: 4vw 3vw;
+    padding: 1vw 3vw;
     min-height: 20vh;
   }
   h2 {
@@ -18,6 +18,12 @@
     line-height: 22px;
     font-weight: 400;
   }
+  .itemWrapper{
+    display: flex;
+    padding: 0px 3vw;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
   
   .profile-card {
     box-sizing: border-box;
@@ -146,13 +152,5 @@
   @media(max-width:730px) {
     #profile-card-container {
       width: fit-content;
-    }
-  }
-  @media(max-width:500px) {
-    #profile-card-container {
-      width: fit-content;
-    }
-    .profile-card{
-      max-width: 368px;
     }
   }
