--- a/app/home/home.css
+++ b/app/home/home.css
@@ -1,156 +1,153 @@
-.studentWrapper{
-    min-height: 80vh;
-  }
-  #profile-card-container {
-    box-sizing: border-box;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    justify-content: space-evenly;
-    align-items: center;
-    gap: 35px;
-    padding: 1vw 3vw;
-    min-height: 20vh;
-  }
-  h2 {
-    cursor: pointer;
-    color: red;
-    font-size: 18px;
-    line-height: 22px;
-    font-weight: 400;
-  }
-  .itemWrapper{
-    display: flex;
-    padding: 0px 3vw;
-    flex-wrap: wrap;
-    justify-content: space-between;
+.studentWrapper {
+  min-height: 80vh;
 }
-  
-  .profile-card {
-    box-sizing: border-box;
-    border-radius: 20px;
-    padding: 25px 25px 25px 10px;
-    box-shadow: 5px 5px 6px #aaaaaa;
-    transition: all 0.12s;
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-    background-image: linear-gradient(150deg, #fff, #f6f1e9, #f6f1e9);
-    max-width: 500px;
-    max-height: 250px;
-  }
-  
-  .profile-card #playdate {
-    cursor: pointer;
-    border: none;
-    background-color: #f6f1e9;
-    color: #ff8400;
-    font-size: 16px;
-    width: fit-content;
-    align-self: flex-end;
-    letter-spacing: 1px;
-    margin-top: 15px;
-    border: 2px solid #ff8400;
-    padding: 10px 15px;
-    border-radius: 5px;
-    transition: all 0.12s;
-    float: right;
-  }
-  
-  .profile-card #playdate:hover {
-    background-color: #ff8400;
-    color: #f6f1e9;
-    border: 2px solid #f6f1e9;
-  
-    .svgIcon path {
-      fill: white;
-    }
-  
-  }
-  
-  .profilePicture {
-    background-color: transparent;
-    border-radius: 50%;
-    height: 150px;
-    object-fit: cover;
-    scale: 1;
-    width: 150px;
-  }
-  
-  .profile-card:hover {
-    transform: scale(1.02);
-    box-shadow: 5px 5px 18px #aaaaaa;
-    background-image: linear-gradient(125deg,
-        #f6f1e9,
-        #ff840015,
-        #ff840040,
-        #ff840060,
-        #ff840090);
-  }
-  
-  
+
+h2 {
+  cursor: pointer;
+  color: red;
+  font-size: 18px;
+  line-height: 22px;
+  font-weight: 400;
+}
+
+.itemWrapper {
+  display: flex;
+  padding: 0px 3vw;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.profilePicture {
+  background-color: transparent;
+  border-radius: 50%;
+  height: 150px;
+  object-fit: cover;
+  scale: 1;
+  width: 150px;
+}
+
+/* #email {
+  overflow-y: auto;
+  word-break: keep-all;
+} */
+
+#profile-card-container {
+  box-sizing: border-box;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 35px;
+  padding: 4vw 3vw;
+  /* margin-top: 50px; */
+  min-height: 90vh;
+  place-items: center;
+}
+
+.profile-card {
+  box-sizing: border-box;
+  border-radius: 20px;
+  padding: 25px 25px 25px 10px;
+  box-shadow: 5px 5px 6px #aaaaaa;
+  transition: all 0.12s;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  background-image: linear-gradient(150deg, #fff, #f6f1e9, #f6f1e9);
+  max-width: 460px;
+  max-height: 250px;
+  width: 100%;
+}
+
+.profile-card:hover {
+  transform: scale(1.02);
+  box-shadow: 5px 5px 18px #aaaaaa;
+  background-image: linear-gradient(
+    125deg,
+    #f6f1e9,
+    #ff840015,
+    #ff840040,
+    #ff840060,
+    #ff840090
+  );
+}
+
+.exploreCardProfilePictureContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 130px;
+  height: 130px;
+  object-fit: cover;
+  border-radius: 100%;
+  background-color: #fff;
+  margin: 0 15px;
+}
+.exploreCardProfilePicture {
+  width: 117px;
+  height: 117px;
+  object-fit: cover;
+  border-radius: 100%;
+}
+
+.exploreCardProfileDogIcon {
+  scale: 5;
+  color: #3c2a21;
+  opacity: 0.7;
+}
+
+.profile-card #profile-info {
+  width: calc(100% - 150px);
+}
+
+.profile-card #profile-info .primary-info {
+  color: #ff8400;
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.profile-card #profile-info .secondary-info {
+  font-size: 14px;
+  color: #3c2a21;
+}
+
+.profile-card #profile-info .secondary-info #breed {
+  font-weight: 500;
+}
+
+.profile-card #playdate {
+  cursor: pointer;
+  border: none;
+  background-color: #f6f1e9;
+  color: #ff8400;
+  font-size: 16px;
+  width: fit-content;
+  align-self: flex-end;
+  letter-spacing: 1px;
+  margin-top: 15px;
+  border: 2px solid #ff8400;
+  padding: 10px 15px;
+  border-radius: 5px;
+  transition: all 0.12s;
+  float: right;
+}
+
+.profile-card #playdate:hover {
+  background-color: #ff8400;
+  color: #f6f1e9;
+  border: 2px solid #f6f1e9;
+}
+
 #email {
-    overflow-y: auto;
-    word-break: keep-all;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  max-width: 80%;
+  word-break: break-all;
+}
+
+@media (max-width: 1470px) {
+  #profile-card-container {
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
   }
-  
-  .exploreCardProfilePictureContainer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 150px;
-    height: 150px;
-    object-fit: cover;
-    border-radius: 100%;
-    background-color: #fff;
-    margin: 0 15px;
-  }
-  
-  .exploreCardProfilePictureContainer a {
-    margin-top: 4px;
-  }
-  
-  .exploreCardProfilePicture {
-    width: 117px;
-    height: 117px;
-    object-fit: cover;
-    border-radius: 100%;
-  }
-  
-  .exploreCardProfileDogIcon {
-    scale: 5;
-    color: #3C2A21;
-    opacity: 0.7;
-  }
-  
-  .profile-card #profile-info {
-    width: calc(100% - 150px);
-  }
-  
-  .profile-card #profile-info .primary-info {
-    color: #ff8400;
-    font-size: 18px;
-    font-weight: 600;
-  }
-  
-  .profile-card #profile-info .secondary-info {
-    font-size: 14px;
-    color: #3c2a21;
-  }
-  
-  .profile-card #profile-info .secondary-info #post {
-    font-weight: 800;
-    margin: 10px auto
-  }
-  
-  
-  @media (max-width: 1190px) {
-    #profile-card-container {
-      grid-template-columns: repeat(auto-fit, minmax(395px, 1fr));
-    }
-  }
-  
-  @media(max-width:730px) {
-    #profile-card-container {
-      width: fit-content;
-    }
-  }
+}
